tests/baselines/reference/unusedParametersinConstructor3.errors.txt
tests/cases/compiler/unusedParametersinConstructor3.ts(2,17): error TS6133: 'param1' is declared but its value is never read.
tests/cases/compiler/unusedParametersinConstructor3.ts(2,49): error TS6133: 'param3' is declared but its value is never read.


==== tests/cases/compiler/unusedParametersinConstructor3.ts (2 errors) ====
    class greeter {
        constructor(param1: string, param2: string, param3: string) {
                    ~~~~~~
!!! error TS6133: 'param1' is declared but its value is never read.
                                                    ~~~~~~
!!! error TS6133: 'param3' is declared but its value is never read.
            param2 = param2 + "dummy value";
        }
    }